--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ events {
 
 http {
     upstream php-fpm {
-      server unix:/run/php-fpm/www.sock;
+      server unix:/tmp/php-fpm/php7-fpm.sock;
     }
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -29,7 +29,7 @@ http {
     tcp_nodelay         on;
     types_hash_max_size 2048;
 
-    fastcgi_cache_path process/cache levels=1:2 keys_zone=microcache:10m inactive=60m;
+    fastcgi_cache_path /data/cache levels=1:2 keys_zone=microcache:10m inactive=60m;
     fastcgi_cache_key $scheme$host$request_uri$request_method;
 
     client_max_body_size 100M;
