Deny dotfiles and increase cache size and timeout

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,7 +29,7 @@ http {
     tcp_nodelay         on;
     types_hash_max_size 2048;
 
-    fastcgi_cache_path /data/cache levels=1:2 keys_zone=microcache:10m inactive=60m;
+    fastcgi_cache_path /data/cache levels=1:2 keys_zone=microcache:25m inactive=240m;
     fastcgi_cache_key $scheme$host$request_uri$request_method;
 
     client_max_body_size 100M;
@@ -79,7 +79,7 @@ http {
         root         /data/wordpress;
 
         location / {
-                try_files $uri $uri/ $uri.php?$query_string;
+                try_files $uri $uri/ $uri.php?$query_string /index.php?$args;
                 index index.php;
         }
 
