--- a/nginx.d/security.conf
+++ b/nginx.d/security.conf
@@ -7,6 +7,9 @@ location ~ .*readme.txt$ {
 location ~* wp-config.php {
     deny all;
 }
-location ~* ^/wp-content/uploads/.*.(html|htm|shtml|php|js|swf)$ {
+location ~* /(uploads|files)/.*\.(html|htm|shtml|php|js|swf)$ {
+    deny all;
+}
+location ~ /\. {
     deny all;
 }
