--- a/nginx.d/cache-headers.conf
+++ b/nginx.d/cache-headers.conf
@@ -1,4 +1,4 @@
-location ~*.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf) {
+location ~*.(css|js|ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|rss|atom|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf) {
     fastcgi_hide_header       Set-Cookie;
     fastcgi_ignore_headers    Set-Cookie;
     proxy_set_header          Cookie "";
