Use the cache if available on error

--- a/nginx.conf
+++ b/nginx.conf
@@ -87,5 +87,7 @@ http {
         include nginx.d/fpm-proxy.conf;
         include nginx.d/cache-headers.conf;
         include nginx.d/security.conf;
+
+        proxy_cache_use_stale error timeout http_500 http_502 http_503 http_504;
     }
 }
