Serve index.php if no files are found

--- a/nginx.conf
+++ b/nginx.conf
@@ -77,10 +77,14 @@ http {
         listen       [::]:443 ssl;
 
         root         /data/wordpress;
+        
+        if (!-e $request_filename) {
+          rewrite ^.*$ /index.php last;
+        }
 
         location / {
-                try_files $uri $uri/ $uri.php?$query_string /index.php?$args;
-                index index.php;
+          try_files $uri $uri/ $uri.php?$query_string /index.php?$args;
+          index index.php;
         }
 
         include nginx.d/php-cache.conf;
